# MatrixRenderer

./: Cargo.toml  README.md
src/: cameras.rs  drawable.rs  drawables.rs  lib.rs  main.rs  pipelines.rs  renderer.rs  simple_texture_shader.wgsl  texture.rs  vertex.rs
src/math/: matrices.rs  matrix.rs  mod.rs  transformable_matrices.rs  vectors.rs
src/pipelines/: bind_groups.rs  buffers.rs  group_cluster.rs  group_layout_manager.rs  instance_manager.rs  matrix_render_pipeline.rs  mod.rs  shaders.rs  texture.rs  transform.rs
src/pipelines/structures/: plain.rs
src/renderer/: camera.rs  mod.rs  render_object.rs  render_resource.rs  renderer_system.rs  shaders.wgsl  window.rs  window_renderer_system.rs  window_system.rs
tests/: main.rs
