[package]
name = "matrix_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version ="1.13.0",features = ["derive"]}
image = "0.24.5"
tokio = { version = "1.25.0", features = ["full"] }
wgpu = "0.15.1"
winit = "0.28.1"
